manifests/gotiny_dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotiny-deployment
  labels:
    app: gotiny
    use: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotiny
      use: app
  template:
    metadata:
      labels:
        app: gotiny
        use: app
    spec:
      containers:
        - name: gotiny
          image: docker.io/pkotas/gotiny-app:logop
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
