manifests/proxy_dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
  labels:
    app: gotiny
    use: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotiny
      use: proxy
  template:
    metadata:
      labels:
        app: gotiny
        use: proxy
    spec:
      containers:
        - name: gotiny
          image: docker.io/pkotas/gotiny-proxy:traceop
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
