manifests/redis_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  labels:
    app: gotiny
    use: cache
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    use: cache
